Fix spacing issue with .proj1, .proj2, .proj3, github button

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,12 @@ body {
   justify-content: center;
   align-items: center;
   width: 250px;
-  margin: 25px auto;
+  margin: 75px auto;
+}
+
+.gh-link p {
+  text-align: center;
+  margin: 5px;
 }
 
 .btn-primary {
@@ -76,10 +81,11 @@ body {
 .project-container {
   width: 100%;
   margin: 0 auto;
+  flex-wrap: wrap;
 }
 .project-container img{
-  max-width: 300px;
-  height: 280px;
+  width: 350px;
+  height: 300px;
 }
 
 .proj1, .proj2, .proj3 {
@@ -87,11 +93,6 @@ body {
   margin: 0;
 }
 
-.proj1, .proj3 {
-  display: flex;
-  align-items: center;
-  height: 700px;
-}
 
 /* Media Queries */
 @media screen and (max-width: 480px) {
